<resources>
    <string name="app_name">Outreach</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Don\'t have an account? Register Here</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_map">Map</string>
    <string name="title_group">Group</string>
    <string name="title_recent_alerts">Recent Alerts</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_settings">Settings</string>
    <string name="title_alert">ALERT</string>
    <string name="title_activity_main">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="prompt_name">Name</string>
    <string name="prompt_number">Number</string>
    <string name="register">Register</string>
    <string name="map_btton">View Map</string>
    <string name="group_btton">Add Lauren to Group</string>


</resources>
